--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-localization": "^1.0.15",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.19",
@@ -56,6 +57,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.29.6",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "concurrently": "^5.3.0",
