--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,6 +6,7 @@
   "rules": {
     "at-rule-no-unknown": [true, {
       "ignoreAtRules": ["function", "if", "else", "return", "each", "include", "mixin", "extend"]
-    }]
+    }],
+    "indentation": 2
   }
 }
