--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "node": ">=12.14.1"
   },
   "scripts": {
-    "ts:css": "tsm src/**/*.module.scss -s -c -p",
-    "start": "concurrently \"npm:ts:css -- -w\" \"react-scripts start\"",
+    "ts:scss": "tsm src/**/*.module.scss -s -c -p",
+    "start": "concurrently \"npm:ts:scss -- -w\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage",
-    "lint": "yarn run lint:ts && yarn run lint:css",
+    "test:push": "cross-env CI=true react-scripts test --env=jsdom",
+    "test:coverage": "npm test -- --coverage --watchAll=false",
+    "lint": "yarn run lint:ts",
     "lint:ts": "tsc && yarn lint:eslint",
-    "lint:eslint": "eslint --ext=ts,tsx \"src/**/*.{ts,tsx}\"",
+    "lint:eslint": "eslint ./ -c ./.eslintrc --ext .ts,.tsx",
     "lint:css": "stylelint --syntax scss \"src/**/*.scss\"",
-    "storybook": "start-storybook -p 4000 -s public"
+    "lint:staged": "lint-staged --verbose",
+    "storybook": "start-storybook -p 4000 -s public",
+    "storybook:build": "build-storybook -s public -o build/storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,6 +55,7 @@
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/node-sass": "^4.11.1",
@@ -62,6 +66,7 @@
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "concurrently": "^5.3.0",
+    "cross-env": "^7.0.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^6.8.0",
@@ -74,12 +79,74 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-unicorn": "^15.0.1",
+    "faker": "^5.1.0",
+    "husky": "^4.2.5",
+    "jest-junit": "^11.1.0",
+    "lint-staged": "^10.2.13",
     "node-sass": "^4.14.1",
+    "prettier": "^2.1.1",
     "react-scripts": "3.4.1",
     "stylelint": "^13.6.1",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-standard": "^20.0.0",
+    "ts-jest": "^26.3.0",
     "typed-scss-modules": "^2.0.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.9.2"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.story.{ts,tsx}",
+      "!src/**/*.d.ts",
+      "!src/app.tsx",
+      "!src/index.tsx",
+      "!src/serviceWorker.ts",
+      "!src/hooks/reducer-logger.hook.ts"
+    ],
+    "coveragePathIgnorePatterns": [
+      "./src/*/*.types.{ts,tsx}",
+      "./src/app.tsx",
+      "./src/index.tsx",
+      "./src/serviceWorker.ts"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text-summary",
+      "clover",
+      "html"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 95,
+        "branches": 95,
+        "lines": 95,
+        "functions": 95
+      }
+    },
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+      "^.+\\.module\\.(css|sass|scss)$"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,json,scss,md}": [
+      "prettier --write"
+    ],
+    "src/**/*.{ts,tsx}": [
+      "npm run lint"
+    ],
+    "src/**/*.{scss}": [
+      "npm run lint:scss"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged --verbose",
+      "pre-push": "npm run test:push"
+    }
   }
 }
