--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
+    "baseUrl": ".",
     "noImplicitAny": false,
     "noImplicitThis": false,
     "noUnusedLocals": true,
