--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "npm test -- --coverage --watchAll=false",
     "lint": "yarn run lint:ts",
     "lint:ts": "tsc && yarn lint:eslint",
-    "lint:eslint": "eslint ./ -c ./.eslintrc --ext .ts,.tsx",
+    "lint:eslint": "eslint --ext=ts,tsx \"src/**/*.{ts,tsx}\"",
     "lint:css": "stylelint --syntax scss \"src/**/*.scss\"",
     "lint:staged": "lint-staged --verbose",
     "storybook": "start-storybook -p 4000 -s public",
@@ -72,7 +72,6 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^6.3.1",
     "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-promise": "^4.2.1",
