--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "react-scripts test",
     "test:push": "cross-env CI=true react-scripts test --env=jsdom",
     "test:coverage": "npm test -- --coverage --watchAll=false",
+    "test:pipeline": "react-scripts test --env=jsdom --ci --reporters=default --reporters=jest-junit --coverage --coverageReporters=cobertura --watchAll=false",
     "lint": "yarn run lint:ts",
     "lint:ts": "tsc && yarn lint:eslint",
     "lint:eslint": "eslint --ext=ts,tsx \"src/**/*.{ts,tsx}\"",
@@ -56,7 +57,6 @@
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/faker": "^4.1.12",
-    "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/node-sass": "^4.11.1",
     "@types/react": "^16.9.0",
@@ -82,7 +82,7 @@
     "lint-staged": "^10.2.13",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "stylelint": "^13.6.1",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-standard": "^20.0.0",
