--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm run test:pipeline
-      - run: npm run lint
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
+      - name: Build
+      - run: yarn build --if-present
+      - name: Test
+      - run: yarn test:pipeline
+      - name: Lint
+      - run: yarn lint
         env:
           CI: true
