--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "classnames": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.2",
     "react-localization": "^1.0.15",
     "react-router-dom": "^5.2.0",
     "yup": "^0.32.8"
@@ -67,7 +68,7 @@
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
     "enzyme": "^3.11.0",
-    "eslint": "^7.12.0",
+    "eslint": "^7.18.0",
     "eslint-config-airbnb-typescript": "^11.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -75,12 +76,12 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "faker": "^5.1.0",
-    "husky": "^4.2.5",
+    "husky": "^4.3.8",
     "jest-junit": "^12.0.0",
     "lint-staged": "^10.5.3",
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "^4.0.1",
     "stylelint": "^13.6.1",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-standard": "^20.0.0",
